--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       MYSQL_RANDOM_ROOT_PASSWORD: "false"
       MYSQL_DATABASE: "passbolt"
       MYSQL_USER: "passbolt"
-      MYSQL_PASSWORD: "P4ssb0lt1"
+      MYSQL_PASSWORD: "<mysqlpassword here>"
     volumes:
       - <input local path for your mysql file>:/var/lib/mysql
 
@@ -22,7 +22,7 @@ services:
       APP_FULL_BASE_URL: <enter your url here, if you are doing an ip address do that instead>
       DATASOURCES_DEFAULT_HOST: "db"
       DATASOURCES_DEFAULT_USERNAME: "passbolt"
-      DATASOURCES_DEFAULT_PASSWORD: "P4ssb0lt1"
+      DATASOURCES_DEFAULT_PASSWORD: "<mysqlpassword here>"
       DATASOURCES_DEFAULT_DATABASE: "passbolt"
       EMAIL_DEFAULT_FROM_NAME: "Passbolt"
       EMAIL_DEFAULT_FROM: "your_default@emailhere.com"
